# vision

aisd_motion/: package.xml  setup.cfg  setup.py
aisd_motion/aisd_motion/: move.py
aisd_msgs/: CMakeLists.txt  package.xml
aisd_msgs/msg/: Hand.msg
aisd_msgs/srv/: Speak.srv
aisd_vision/: package.xml  setup.cfg  setup.py
aisd_vision/aisd_vision/: hands.py  image_publisher.py
